# Solax-Predbat-Dash

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
config/: wattson.yaml
docs/: api-research-design.md  configuration.md  dashboard-design.md  data-quality.md  discounted-payback-methodology.md  domain-model.md  live-data-pipeline.md  octopus-financial-methodology.md  private-dashboard-design.md  solax-failed-workbook-investigation.md  solax-home-assistant-entity-report.md  tariff-whatif-comparison.md  wattson-public-summary.md  weather-forecast-data-layer.md
scripts/: solax_plant_report_poc.py  wattson-update-public-dashboard.ps1
scripts/systemd/: wattson-public-dashboard.service  wattson-public-dashboard.timer
src/config/: __init__.py  loader.py  models.py
src/ingestion/: octopus_client.py  octopus_pipeline.py  solax_pipeline.py  solax_reader.py
src/live/: __init__.py  __main__.py  cli.py  config.py  models.py  octopus.py  publish.py  snapshot.py  solax.py  store.py
src/metrics/: __init__.py  energy.py  models.py  reporting.py
src/models/: octopus.py  payback.py  solax.py
src/tariffs/: __init__.py  __main__.py  cli.py  models.py  octopus_discovery.py  real_comparison.py  (+1 more)
tests/: test_config.py  test_energy_metrics.py  test_financial_transform.py  test_live_pipeline.py  test_octopus_pipeline.py  test_payback_projection.py  test_publication_pipeline.py  test_solax_plant_report_poc.py  test_solax_reader.py  test_solax_transforms.py  test_tariff_whatif.py  test_weather_pipeline.py
(+20 files in other folders)
